	utimes() as a replacement for futimes().
	* configure.in, lib/nscd.h, lib/nscd.c: Added --with-nscd flag to
	support systems without nscd.
	* lib/groupio.h, lib/prototypes.h, lib/pwio.h, lib/sgetgrent.c:
	Include <sys/types.h> before <pwd.h> and <grp.h>. It is necessary
	for the definition of uid_t and gid_t.
	* lib/pwmem.c: do not include <pwd.h>, "pwio.h" is sufficient
	here.

2008-08-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Handle the options alphabetically.

2008-08-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: When removing an user, check if deluser is on
	the list, not adduser. This fixes a segmentation fault for every
	call of groupmems -d.
	* libmisc/list.c: Add assertions to help identifying these issues.
	* libmisc/list.c: Avoid implicit conversion of pointers to
	booleans.

2008-08-26  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupmems.c: Use the "groupmems" PAM service name
	instead of "groupmod".

2008-08-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chfn.c: Merge some translated messages.
	* src/groupmems.c, src/groupadd.c, src/gpasswd.c, src/chsh.c,
	src/chfn.c: Harmonize *_update() failure messages.
	* src/groupmems.c: Harmonize gr_close() failure messages.
	* src/newgrp.c: Harmonize "unknown GID" messages.
	* src/newusers.c: Move the pwd declaration to a inner block scope.

2008-08-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Harmonize some error messages.
	* src/userdel.c: Add log to syslog when the mail file could not be
	removed.
	* src/userdel.c: Give more context an error message (merge with
	perror()).
	* src/usermod.c: Harmonize some error messages.

2008-08-25  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Check the return value of gr_update().
	* src/chage.c, src/chfn.c, src/chgpasswd.c, src/chpasswd.c,
	src/chsh.c, src/gpasswd.c, src/groupadd.c, src/groupmems.c,